// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Gitlab connector Wizard Creating gitlab step one and step two for HTTPS 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="37"
            viewBox="0 0 14 13"
            width="37"
          >
            <path
              d="M7 12.9L9.6 5H4.4z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L4.4 5H.8z"
              fill="#fc6d26"
            />
            <path
              d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L9.6 5h3.6z"
              fill="#fc6d26"
            />
            <path
              d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
              fill="#e24329"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Gitlab Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          GitLab Connection Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
        style="height: inherit;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
        >
          GitLab Connection Details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main stepFormWrapper"
              >
                <div
                  class="StyledProps--font StyledProps--main authHeaderRow"
                >
                  <span
                    class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
                  >
                    Authentication
                  </span>
                  <div
                    class="bp3-form-group"
                    data-id="authType-0"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="authType"
                              placeholder="Search..."
                              style="padding-right: 0px;"
                              type="text"
                              value="Username and Password"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                icon="caret-down"
                              >
                                <svg
                                  data-icon="caret-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    caret-down
                                  </desc>
                                  <path
                                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-intent-danger"
                  data-id="username-1"
                >
                  <label
                    class="bp3-label"
                    for="username"
                  >
                    Username
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-intent-danger"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="username"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="bp3-form-helper-text"
                    >
                      Username is a required field
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-2"
                >
                  <label
                    class="bp3-label"
                  >
                    Password
                  </label>
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                        style="align-items: center; width: 100%;"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <span>
                          Create or Select a Secret
                        </span>
                      </div>
                    </span>
                  </button>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-danger"
                  >
                    Password is a required field
                  </p>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="enableAPIAccess-3"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                    >
                      <input
                        name="enableAPIAccess"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Enable API access
                    </label>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main saveButton StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save and Continue
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Gitlab connector Wizard Creating gitlab step one for SSH key 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="37"
            viewBox="0 0 14 13"
            width="37"
          >
            <path
              d="M7 12.9L9.6 5H4.4z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L4.4 5H.8z"
              fill="#fc6d26"
            />
            <path
              d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L9.6 5h3.6z"
              fill="#fc6d26"
            />
            <path
              d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
              fill="#e24329"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Gitlab Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          GitLab Connection Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          GitHub Connector Overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                    >
                      <div
                        class="StyledProps--font StyledProps--main connectorFormNameElm"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="InputWithIdentifier--idInput"
                              contenteditable="true"
                            >
                              dummyname
                              
                            </span>
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps--main"
                              icon="edit"
                              style="vertical-align: middle;"
                            >
                              <svg
                                data-icon="edit"
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              Name
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value="dummyname"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                        style="justify-content: center;"
                      >
                        <p
                          class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                        >
                          + Description
                        </p>
                        <p
                          class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--color StyledProps--color-blue500"
                        >
                          + Tags
                        </p>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main connectorFormElm"
                    >
                      
                    </div>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    URL Type
                  </p>
                  <div
                    class="bp3-form-group"
                    data-id="urlType-1"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            checked=""
                            name="urlType"
                            type="radio"
                            value="Account"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Account
                        </label>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            name="urlType"
                            type="radio"
                            value="Repo"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Repository
                        </label>
                      </div>
                    </div>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Connection Type
                  </p>
                  <div
                    class="bp3-form-group"
                    data-id="connectionType-2"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            checked=""
                            name="connectionType"
                            type="radio"
                            value="Http"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          HTTPS
                        </label>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            name="connectionType"
                            type="radio"
                            value="Ssh"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          SSH
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group formElm"
                    data-id="url-3"
                  >
                    <label
                      class="bp3-label"
                      for="url"
                    >
                      Gitlab Account URL
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="url"
                          placeholder="git@gitlab.com:account/"
                          type="text"
                          value="gitlabTestUrl"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Gitlab connector Wizard Creating gitlab step one for SSH key 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="37"
            viewBox="0 0 14 13"
            width="37"
          >
            <path
              d="M7 12.9L9.6 5H4.4z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L4.4 5H.8z"
              fill="#fc6d26"
            />
            <path
              d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L9.6 5h3.6z"
              fill="#fc6d26"
            />
            <path
              d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
              fill="#e24329"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Gitlab Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          GitLab Connection Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          GitHub Connector Overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main"
                  >
                    <div
                      class="StyledProps--font StyledProps--main connectorFormNameWrapper"
                    >
                      <div
                        class="StyledProps--font StyledProps--main connectorFormNameElm"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="InputWithIdentifier--idInput"
                              contenteditable="true"
                            >
                              dummyname
                              
                            </span>
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps--main"
                              icon="edit"
                              style="vertical-align: middle;"
                            >
                              <svg
                                data-icon="edit"
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              Name
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value="dummyname"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main connectorFormElm"
                    >
                      <div
                        class="bp3-form-group expandedDescription"
                      >
                        <label
                          class="bp3-label"
                          for="description"
                        >
                          <div
                            class="StyledProps--font StyledProps--main headerRow"
                          >
                            <span
                              class="StyledProps--font StyledProps--main StyledProps--inline"
                            >
                              Description
                            </span>
                            <span
                              class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--inline StyledProps--color StyledProps--color-blue500"
                            >
                              remove
                            </span>
                          </div>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <textarea
                            autocomplete="off"
                            class="bp3-input bp3-fill"
                            name="description"
                          />
                        </div>
                      </div>
                      <div
                        class="bp3-form-group expandedTags"
                      >
                        <label
                          class="bp3-label"
                          for="tags"
                        >
                          <div
                            class="StyledProps--font StyledProps--main headerRow"
                          >
                            <span
                              class="StyledProps--font StyledProps--main StyledProps--inline"
                            >
                              Tags
                            </span>
                            <span
                              class="StyledProps--font StyledProps--main fieldToggleLabel StyledProps--inline StyledProps--color StyledProps--color-blue500"
                            >
                              remove
                            </span>
                          </div>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input bp3-tag-input"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                class="bp3-input-ghost"
                                data-mentions="kv-tag-input-tags}"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    URL Type
                  </p>
                  <div
                    class="bp3-form-group"
                    data-id="urlType-1"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            checked=""
                            name="urlType"
                            type="radio"
                            value="Account"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Account
                        </label>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            name="urlType"
                            type="radio"
                            value="Repo"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Repository
                        </label>
                      </div>
                    </div>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Connection Type
                  </p>
                  <div
                    class="bp3-form-group"
                    data-id="connectionType-2"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            checked=""
                            name="connectionType"
                            type="radio"
                            value="Http"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          HTTPS
                        </label>
                        <label
                          class="bp3-control bp3-radio bp3-inline Radio--radio"
                        >
                          <input
                            name="connectionType"
                            type="radio"
                            value="Ssh"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          SSH
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group formElm"
                    data-id="url-3"
                  >
                    <label
                      class="bp3-label"
                      for="url"
                    >
                      Gitlab Account URL
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="url"
                          placeholder="git@gitlab.com:account/"
                          type="text"
                          value="gitlabTestUrl"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Gitlab connector Wizard Creating gitlab step one for SSH key 3`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="37"
            viewBox="0 0 14 13"
            width="37"
          >
            <path
              d="M7 12.9L9.6 5H4.4z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L4.4 5H.8z"
              fill="#fc6d26"
            />
            <path
              d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L9.6 5h3.6z"
              fill="#fc6d26"
            />
            <path
              d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
              fill="#e24329"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Gitlab Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          GitLab Connection Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
        style="height: inherit;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
        >
          GitLab Connection Details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main stepFormWrapper"
              >
                <p
                  class="StyledProps--font StyledProps--main authTitle StyledProps--font-weight-bold"
                >
                  Authentication
                </p>
                <div
                  class="bp3-form-group"
                  data-id="null-0"
                >
                  <label
                    class="bp3-label"
                  >
                    SSH Key
                  </label>
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                        style="align-items: center; width: 100%;"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <span>
                          Create or Select a Secret
                        </span>
                      </div>
                    </span>
                  </button>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="enableAPIAccess-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                    >
                      <input
                        name="enableAPIAccess"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Enable API access
                    </label>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main saveButton StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save and Continue
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Gitlab connector Wizard Creating gitlab step one for SSH key 4`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="37"
            viewBox="0 0 14 13"
            width="37"
          >
            <path
              d="M7 12.9L9.6 5H4.4z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L4.4 5H.8z"
              fill="#fc6d26"
            />
            <path
              d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L9.6 5h3.6z"
              fill="#fc6d26"
            />
            <path
              d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
              fill="#e24329"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Gitlab Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          GitLab Connection Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
        style="height: inherit;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
        >
          GitLab Connection Details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main stepFormWrapper"
              >
                <p
                  class="StyledProps--font StyledProps--main authTitle StyledProps--font-weight-bold"
                >
                  Authentication
                </p>
                <div
                  class="bp3-form-group"
                  data-id="null-0"
                >
                  <label
                    class="bp3-label"
                  >
                    SSH Key
                  </label>
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                        style="align-items: center; width: 100%;"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <span>
                          Create or Select a Secret
                        </span>
                      </div>
                    </span>
                  </button>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-danger"
                  >
                    SSH key is required
                  </p>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="enableAPIAccess-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                    >
                      <input
                        name="enableAPIAccess"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Enable API access
                    </label>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main saveButton StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save and Continue
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Gitlab connector Wizard should be able to edit  usernamePassword without API access 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="37"
            viewBox="0 0 14 13"
            width="37"
          >
            <path
              d="M7 12.9L9.6 5H4.4z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L4.4 5H.8z"
              fill="#fc6d26"
            />
            <path
              d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L9.6 5h3.6z"
              fill="#fc6d26"
            />
            <path
              d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
              fill="#e24329"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Gitlab Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          GitLab Connection Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
        style="height: inherit;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
        >
          GitLab Connection Details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main stepFormWrapper"
              >
                <div
                  class="StyledProps--font StyledProps--main authHeaderRow"
                >
                  <span
                    class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
                  >
                    Authentication
                  </span>
                  <div
                    class="bp3-form-group"
                    data-id="authType-0"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="authType"
                              placeholder="Search..."
                              style="padding-right: 0px;"
                              type="text"
                              value="Username and Password"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                icon="caret-down"
                              >
                                <svg
                                  data-icon="caret-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    caret-down
                                  </desc>
                                  <path
                                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="username-1"
                >
                  <label
                    class="bp3-label"
                    for="username"
                  >
                    Username
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="username"
                        type="text"
                        value="dev"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-2"
                >
                  <label
                    class="bp3-label"
                  >
                    Password
                  </label>
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                        style="align-items: center; width: 100%;"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <span>
                          gitlabPassword
                        </span>
                      </div>
                    </span>
                  </button>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="enableAPIAccess-3"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                    >
                      <input
                        name="enableAPIAccess"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Enable API access
                    </label>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main saveButton StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save and Continue
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Gitlab connector Wizard should be able to edit ssh with API access 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="37"
            viewBox="0 0 14 13"
            width="37"
          >
            <path
              d="M7 12.9L9.6 5H4.4z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L4.4 5H.8z"
              fill="#fc6d26"
            />
            <path
              d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
              fill="#e24329"
            />
            <path
              d="M7 12.9L9.6 5h3.6z"
              fill="#fc6d26"
            />
            <path
              d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
              fill="#fca326"
            />
            <path
              d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
              fill="#e24329"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Gitlab Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          GitLab Connection Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
        style="height: inherit;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
        >
          GitLab Connection Details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main stepFormWrapper"
              >
                <p
                  class="StyledProps--font StyledProps--main authTitle StyledProps--font-weight-bold"
                >
                  Authentication
                </p>
                <div
                  class="bp3-form-group"
                  data-id="null-0"
                >
                  <label
                    class="bp3-label"
                  >
                    SSH Key
                  </label>
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                        style="align-items: center; width: 100%;"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <span>
                          gitlabPassword
                        </span>
                      </div>
                    </span>
                  </button>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="enableAPIAccess-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                    >
                      <input
                        checked=""
                        name="enableAPIAccess"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Enable API access
                    </label>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--margin-bottom-small"
                >
                  API Access is required for using “Git Experience”, for creation of Git based triggers, Webhooks management and updating Git statuses
                </p>
                <div
                  class="StyledProps--font StyledProps--main authHeaderRow"
                >
                  <span
                    class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
                  >
                    API Authentication
                  </span>
                  <div
                    class="bp3-form-group"
                    data-id="apiAuthType-2"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="apiAuthType"
                              placeholder="Search..."
                              style="padding-right: 0px;"
                              type="text"
                              value="Personal Access Token"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                icon="caret-down"
                              >
                                <svg
                                  data-icon="caret-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    caret-down
                                  </desc>
                                  <path
                                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-3"
                >
                  <label
                    class="bp3-label"
                  >
                    Personal Access Token
                  </label>
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                        style="align-items: center; width: 100%;"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <span>
                          gitlabPassword
                        </span>
                      </div>
                    </span>
                  </button>
                </div>
                 
              </div>
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main saveButton StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save and Continue
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
